--- a/interface/modules/zend_modules/module/Application/view/application/sendto/send.phtml
+++ b/interface/modules/zend_modules/module/Application/view/application/sendto/send.phtml
@@ -182,12 +182,12 @@ $download_format = $this->download_format;
     </div>
     <div id="componentsForCCDA" style="height:300px !important;display:none;" class="ap-st-st-13">
         <div style="display:inline-flex;width:100%;">
-            <div style="width:35%">
-                <label><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_toc" value="toc" checked>&nbsp;<?php echo $this->listenerObject->z_xlt('Transistion of Care') ?></label>
-            </div>
             <div style="width:15%">
-                <label style="margin:1px 2px;"><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_ccd" value="ccd">&nbsp;<?php echo $this->listenerObject->z_xlt('CCD') ?></label>
+                <label style="margin:1px 2px;"><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_ccd" value="ccd" checked>&nbsp;<?php echo $this->listenerObject->z_xlt('CCD') ?></label>
             </div>
+            <div style="width:35%">
+                <label><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_toc" value="toc" >&nbsp;<?php echo $this->listenerObject->z_xlt('Transistion of Care') ?></label>
+            </div>N
             <div style="width:25%">
                 <label><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_careplan" value="careplan">&nbsp;<?php echo $this->listenerObject->z_xlt('Careplan') ?></label>
             </div>
