Remove extraneous letter in send screen.

--- a/interface/modules/zend_modules/module/Application/view/application/sendto/send.phtml
+++ b/interface/modules/zend_modules/module/Application/view/application/sendto/send.phtml
@@ -187,7 +187,7 @@ $download_format = $this->download_format;
             </div>
             <div style="width:35%">
                 <label><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_toc" value="toc" >&nbsp;<?php echo $this->listenerObject->z_xlt('Transistion of Care') ?></label>
-            </div>N
+            </div>
             <div style="width:25%">
                 <label><input class="ap-st-st-3" type="radio" name="downloadformat_type" id="downloadformat_careplan" value="careplan">&nbsp;<?php echo $this->listenerObject->z_xlt('Careplan') ?></label>
             </div>
